--- a/src/app/components/bio/bio-about-me/bio-about-me.component.css
+++ b/src/app/components/bio/bio-about-me/bio-about-me.component.css
@@ -20,7 +20,12 @@
     text-align: center;
     font-size: 50px;
     font-weight: bolder;
-    margin: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.about-me-card p {
+    margin-left: 28px;
 }
 
 .about-me-card h1, p {
